--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,23 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- Update favicon and apple-touch-icon to use the logo1.png image from public/images -->
+  <link rel="icon" href="%PUBLIC_URL%/images/logo1.png" sizes="32x32" type="image/png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo1.png" sizes="180x180" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <meta name="description" content="JMS - Your App Description Here" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>React App</title>
+  <!-- Ensure manifest.json is correctly referenced -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>JMS</title>
+  <!-- Open Graph meta tags for better sharing on social media -->
+  <meta property="og:title" content="JMS" />
+  <meta property="og:description" content="Description of JMS app here." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/logo1.png" />
+  <meta property="og:url" content="https://your-app-url.com" />
 </head>
 
 <body>
