--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="JMS - Your App Description Here" />
+  <meta name="description" content="JMS - Be The Solution" />
 
   <!-- Ensure manifest.json is correctly referenced -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -17,7 +17,7 @@
   <title>JMS</title>
   <!-- Open Graph meta tags for better sharing on social media -->
   <meta property="og:title" content="JMS" />
-  <meta property="og:description" content="Description of JMS app here." />
+  <meta property="og:description" content="Be The Solution." />
   <meta property="og:image" content="%PUBLIC_URL%/images/logo1.png" />
   <meta property="og:url" content="https://your-app-url.com" />
 </head>
